some modifications to the justification pane, law pane and Jim's fix to the n3 parser whitespace stripping causing overall Tabulator document parsing slowness

--- a/chrome/content/tabbedtab.css
+++ b/chrome/content/tabbedtab.css
@@ -74,7 +74,8 @@ div.nonCompliantPane {
     padding: 0.5em;  
     background-color: #fbf0f7; 
     margin-top: 0.5em; margin-bottom: 0.5em;
-    -moz-border-radius: 1em;
+    -moz-border-radius: 0.5em;
+    width: 60%;
 }
 
 div.compliantPane {
@@ -85,11 +86,24 @@ div.compliantPane {
     padding: 0.5em;  
     background-color: #def8e0; 
     margin-top: 0.5em; margin-bottom: 0.5em;
-    -moz-border-radius: 1em;
+    -moz-border-radius: 0.5em;
+    width: 60%;
+}
+
+div.filterPane {
+    border-top: solid 1px #ff6633;
+    border-left: solid 1px #ff6633;
+    border-bottom: solid 1px #ff6633;
+    border-right: solid 1px #ff6633;
+    padding: 0.5em;  
+    background-color: #ff9966; 
+    margin-top: 0.5em; margin-bottom: 0.5em;
+    -moz-border-radius: 0.5em;
+    width: 60%;
 }
 
 div.justification {
-    font-size: 100%;
+    font-size: 120%;
     padding: 0 5px;
     width: 80%; /* @@ Don't use pixels -- use em */
     background-color: white; 
@@ -98,13 +112,12 @@ div.justification {
 
 
 div.description {
-    font-size: 120%;
     border-top: solid 1px yellow;
     border-left: solid 1px yellow;
     border-bottom: solid 1px yellow;
     border-right: solid 1px yellow;
     padding: 15px;
-    width: 100%; 
+    width: 80%; 
     background-color: #ffffdd; 
     margin-top: 0.5em; 
     margin-bottom: 0.5em;
@@ -122,7 +135,7 @@ div.premises {
     border-bottom: solid 1px #3399ff;
     border-right: solid 1px #3399ff;
     padding: 0.5px;
-    width: 100%; 
+    width: 80%; 
     background-color: #ccccff; 
     margin-top: 0.5em; 
     margin-bottom: 0.5em;
